# zk-kyc

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  fourmolu.yaml  zk-kyc.cabal
app/: Main.hs
docs/: KYC.html  Server.html  doc-index.html  index.html
example-json/: kyc-data.json  prover-output.json
src/: KYC.hs  Server.hs
test/: Main.hs
