cabal-version:      3.0
name:               zk-kyc
version:            0.1.0.0
synopsis:           ZkFold KYC Server
author:             Evgeniy Samodelov
maintainer:         vlasin@zkfold.io
license-file:       LICENSE
build-type:         Simple

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      TypeOperators,
      ViewPatterns

library
    import:           options
    exposed-modules:  Server
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base                          >= 4.9 && < 5,
        aeson                                >= 0.5,
        bytestring                                 ,
        servant-server                             ,
        symbolic-base                              ,
        symbolic-apps                              ,
        QuickCheck                                 ,
        zkfold-prover,
    hs-source-dirs:   src
    default-language: Haskell2010

executable zk-kyc
    import:           options
    main-is:          Main.hs
    build-depends:
        base                            ^>=4.18.1.0,
        base-compat                                ,
        servant-server                             ,
        warp                                       ,
        zk-kyc                                     ,
        optparse-applicative                       ,
        wai
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite zk-kyc-test
    import:           options
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base                             ^>=4.18.1.0,
        zk-kyc                                      ,
        symbolic-base                               ,
        tasty-hunit                                 ,
        tasty                                       ,
        zkfold-prover,
